docs/api/qiskit/0.46/qiskit.primitives.SamplerResult.mdx
---
title: SamplerResult
description: API reference for qiskit.primitives.SamplerResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.primitives.SamplerResult
---

# SamplerResult

<Class id="qiskit.primitives.SamplerResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/primitives/base/sampler_result.py" signature="qiskit.primitives.SamplerResult(quasi_dists, metadata)">
  Bases: `_BasePrimitiveResult`

  Result of Sampler.

  ```python
  result = sampler.run(circuits, params).result()
  ```

  where the i-th elements of `result` correspond to the circuit given by `circuits[i]`, and the parameter values bounds by `params[i]`. For example, `results.quasi_dists[i]` gives the quasi-probabilities of bitstrings, and `result.metadata[i]` is a metadata dictionary for this circuit and parameters.

  **Parameters**

  *   **quasi\_dists** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[*[*QuasiDistribution*](qiskit.result.QuasiDistribution "qiskit.result.QuasiDistribution")*]*) – List of the quasi-probabilities.
  *   **metadata** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[*[*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")*]*) – List of the metadata.

  ## Attributes

  ### experiments

  <Attribute id="qiskit.primitives.SamplerResult.experiments" name="experiments">
    Experiment data dicts in any inheriting result dataclass.

    <Admonition title="Deprecated since version 0.46.0" type="danger">
      The property `qiskit.primitives.base.base_result._BasePrimitiveResult.experiments` is deprecated as of qiskit 0.46.0. It will be removed in the Qiskit 1.0 release.
    </Admonition>
  </Attribute>

  ### num\_experiments

  <Attribute id="qiskit.primitives.SamplerResult.num_experiments" name="num_experiments">
    Number of experiments in any inheriting result dataclass.

    <Admonition title="Deprecated since version 0.46.0" type="danger">
      The property `qiskit.primitives.base.base_result._BasePrimitiveResult.num_experiments` is deprecated as of qiskit 0.46.0. It will be removed in the Qiskit 1.0 release.
    </Admonition>
  </Attribute>

  ### quasi\_dists

  <Attribute id="qiskit.primitives.SamplerResult.quasi_dists" name="quasi_dists" attributeTypeHint="list[qiskit.result.distributions.quasi.QuasiDistribution]" />

  ### metadata

  <Attribute id="qiskit.primitives.SamplerResult.metadata" name="metadata" attributeTypeHint="list[dict[str, Any]]" />

  ## Methods

  ### decompose

  <Function id="qiskit.primitives.SamplerResult.decompose" name="decompose" signature="decompose()">
    Generate single experiment result objects from self.

    <Admonition title="Deprecated since version 0.46.0" type="danger">
      The method `qiskit.primitives.base.base_result._BasePrimitiveResult.decompose()` is deprecated as of qiskit 0.46.0. It will be removed in the Qiskit 1.0 release.
    </Admonition>

    **Return type**

    [*Iterator*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Iterator "(in Python v3.12)")\[*\_BasePrimitiveResult*]
  </Function>
</Class>

